--- a/views/card.ejs
+++ b/views/card.ejs
@@ -31,7 +31,7 @@
   </head>
   <body>
     <section class="profile">
-      <div class="rectangle js-preview palette-2">
+      <div class="rectangle js-preview palette-<%= palette %>">
         <div class="rectangle__titles">
           <h2 class="js-reset rectangle__titles-title js_name"> <%= name %> </h2>
           <h3 class="js-reset rectangle__titles-subtitle js_job"> <%= job %> </h3>
